# core

./: LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 531da4f686ac_initial_tables_for_persons_images_and_.py
src/: main.py
src/api/v1/: __init__.py
src/api/v1/images/: router.py  schemas.py  service.py
src/api/v1/persons/: router.py  schemas.py  service.py
src/api/v1/vectors/: router.py  schemas.py  service.py
src/core/: database.py
src/core/config/: settings.py
src/core/dao/: base_dao.py  image_dao.py  person_dao.py  vector_dao.py
src/models/: __init__.py  base.py  enums.py  image.py  person.py  vector.py
